# ibis-singlestoredb

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  functions.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: coverage.yml  pre-commit.yml  publish.yml  smoke-test.yml
conda.recipe/: meta.yaml
examples/: GettingStarted.ipynb  Titanic.ipynb  phones.csv  requirements.txt
ibis/: __init__.py
ibis/tests/: conftest.py
ibis_singlestore/: __init__.py  compiler.py  datatypes.py  ddl.py  registry.py  udf.py
ibis_singlestore/tests/: __init__.py  conftest.py  test_client.py  test_op_matrix.py  test_operation.py  test_operations.py  test_ops.py
ibis_singlestore/tests/ci/ibis-testing-data/: README.md  struct_table.avro
ibis_singlestore/tests/ci/ibis-testing-data/avro/tpch_region_avro/: 000000_0
ibis_singlestore/tests/ci/ibis-testing-data/csv/: 7.csv
ibis_singlestore/tests/ci/ibis-testing-data/parquet/diamonds/: diamonds.parquet
ibis_singlestore/tests/ci/ibis-testing-data/parquet/functional_alltypes/: 9a41de519352ab07-4e76bc4d9fb5a789_1624886651_data.0.parq  9a41de519352ab07-4e76bc4d9fb5a78a_778826485_data.0.parq  9a41de519352ab07-4e76bc4d9fb5a78b_1277612014_data.0.parq
ibis_singlestore/tests/ci/ibis-testing-data/parquet/tpch_nation/: 7347c0828b64e166-b41d886631b002b9_1752448107_data.0.parq
ibis_singlestore/tests/ci/ibis-testing-data/parquet/tpch_supplier/: 1848ecd1a1eaf8ef-bfd26564f8111c9e_1951837082_data.0.parq
ibis_singlestore/tests/execution/: conftest.py  test_operations.py
ibis_singlestore/tests/ibis-tests/: base.py  conftest.py  test_aggregation.py  test_api.py  test_client.py
ibis_singlestore/tests/ibis-tests/ibis-tests/: test_aggregation.py  test_api.py
ibis_singlestore/tests/testing-data/: functional_alltypes.csv  functional_alltypes.parquet
ibis_singlestore/tests/testing-data/parquet/awards_players/: awards_players.parquet
ibis_singlestore/tests/testing-data/parquet/batting/: batting.parquet
ibis_singlestore/tests/testing-data/parquet/tpch_region/: d84f84a8c3a8754f-bbcd7d7c2be0bebd_1659126035_data.0.parq
ibis_singlestore/tests/tests/: conftest.py  test_client.py
ibis_singlestore/tests/tests/execution/: conftest.py  test_functions.py  test_join.py  test_operations.py
ibis_singlestoredb/: __init__.py  compiler.py  database.py  datatypes.py  expr.py  functions.py  registry.py  sqlglot.py
ibis_singlestoredb/functions/: __init__.py  general.py  user.py
ibis_singlestoredb/functions/json/: __init__.py  json_array_contains.py  json_array_push.py  json_base.py  json_delete_key.py  json_extract.py  json_get_type.py  json_include_exclude_mask.py  json_keys.py  json_length.py  json_pretty.py  json_set.py  json_splice.py
ibis_singlestoredb/functions/numeric/: __init__.py
ibis_singlestoredb/functions/vector/: __init__.py  dot_product.py  euclidean_distance.py  json_array_pack.py  json_array_unpack.py  scalar_vector_mul.py  vector_add.py  vector_elements_sum.py  vector_kth_element.py  vector_mul.py  vector_num_elements.py  vector_sort.py  vector_sub.py  vector_subvector.py  vector_sum.py
ibis_singlestoredb/tests/: conftest.py  datatypes.csv  json.sql  test.sql  test_client.py  test_functions.py  test_op_matrix.py  test_ops.py  vm.sql
resources/: drop_db.py  init_db.py
