[metadata]
name = ibis-singlestore
version = 0.1.0
author = SingleStore
author_email = support@singlestore.com
url = https://github.com/singlestore-labs/ibis-singlestore
license_file = LICENSE
license = Apache 2.0
description = Ibis backend for the SingleStore database
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database

[options]
install_requires =
    ibis-framework >=2.0.0,<3.0.0dev
    singlestore
namespace_packages =
    singlestore
packages =
    singlestore.ibis
package_dir =
    singlestore.ibis = ibis_singlestore


[options.packages.find]
exclude =
    resources*
    examples*

[options.entry_points]
ibis.backends =
    singlestore = singlestore.ibis

[flake8]
exclude = resources
max-complexity = 20
max-line-length = 90
per-file-ignores =
    ibis/__init__.py:F401

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
