[metadata]
name = ibis_singlestoredb
version = 0.1.0
description = Ibis backend for the SingleStore database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/singlestore-labs/ibis-singlestore
author = SingleStore
author_email = support@singlestore.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database

[options]
packages = find:
install_requires =
    ibis-framework>=3.0.0,<4.0.0dev
    singlestoredb
    sqlalchemy-singlestoredb
python_requires = >=3.7
tests_require =
    pytest
    coverage
    nose2

[options.packages.find]
exclude =
    resources*
    examples*
    docs*
    licenses*

[options.entry_points]
ibis.backends =
    singlestoredb = ibis_singlestoredb

[options.package_data]
* =
    *.sql
    *.csv

[flake8]
exclude = resources
max-complexity = 25
max-line-length = 90
per-file-ignores =
    ibis_singlestoredb/__init__.py:F401

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
