[metadata]
name = ibis_singlestoredb
version = 0.4.0
description = Ibis backend for the SingleStore database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/singlestore-labs/ibis-singlestoredb
author = SingleStore
author_email = support@singlestore.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database

[options]
packages = find:
install_requires =
    ibis-framework>=6.1.0,<7.0.0dev
    singlestoredb>=0.8.0
    sqlalchemy-singlestoredb>=0.3.0
python_requires = >=3.8
tests_require =
    pytest
    coverage
    nose2

[options.packages.find]
exclude =
    resources*
    examples*
    docs*
    licenses*

[options.entry_points]
ibis.backends =
    singlestoredb = ibis_singlestoredb

[options.package_data]
* =
    *.sql
    *.csv

[flake8]
exclude = resources
max-complexity = 35
max-line-length = 90
per-file-ignores =
    ibis_singlestoredb/__init__.py:F401
    ibis_singlestoredb/functions/__init__.py:F401,F403
    ibis_singlestoredb/functions/json/__init__.py:F401,F403
    ibis_singlestoredb/functions/numeric/__init__.py:F401,F403
    ibis_singlestoredb/functions/vector/__init__.py:F401,F403

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
